Update to 'v0.34.27' of github.com:cometbft/cometbft (#980)
